; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/serial/extr_garmin_gps.c_garmin_clear.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/serial/extr_garmin_gps.c_garmin_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.garmin_data = type { i32, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.garmin_data*)* @garmin_clear to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @garmin_clear(%struct.garmin_data* %0) #0 {
  %2 = alloca %struct.garmin_data*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store %struct.garmin_data* %0, %struct.garmin_data** %2, align 8
  store i32 0, i32* %4, align 4
  %5 = load %struct.garmin_data*, %struct.garmin_data** %2, align 8
  %6 = call i32 @pkt_clear(%struct.garmin_data* %5)
  %7 = load %struct.garmin_data*, %struct.garmin_data** %2, align 8
  %8 = getelementptr inbounds %struct.garmin_data, %struct.garmin_data* %7, i32 0, i32 0
  %9 = load i64, i64* %3, align 8
  %10 = call i32 @spin_lock_irqsave(i32* %8, i64 %9)
  %11 = load %struct.garmin_data*, %struct.garmin_data** %2, align 8
  %12 = getelementptr inbounds %struct.garmin_data, %struct.garmin_data* %11, i32 0, i32 2
  store i64 0, i64* %12, align 8
  %13 = load %struct.garmin_data*, %struct.garmin_data** %2, align 8
  %14 = getelementptr inbounds %struct.garmin_data, %struct.garmin_data* %13, i32 0, i32 1
  store i64 0, i64* %14, align 8
  %15 = load %struct.garmin_data*, %struct.garmin_data** %2, align 8
  %16 = getelementptr inbounds %struct.garmin_data, %struct.garmin_data* %15, i32 0, i32 0
  %17 = load i64, i64* %3, align 8
  %18 = call i32 @spin_unlock_irqrestore(i32* %16, i64 %17)
  %19 = load i32, i32* %4, align 4
  ret i32 %19
}

declare dso_local i32 @pkt_clear(%struct.garmin_data*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
